--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ethers-flashbots"
 version = "0.16.0"
-authors = ["Oliver Nordbjerg <hi@notbjerg.me>", "Riley <riley@twobrotherscrypto.dev"]
+authors = ["Oliver Nordbjerg <hi@notbjerg.me>", "Riley <https://github.com/rileyg98>"]
 license = "MIT"
 edition = "2018"
 readme = "./README.md"
